# ChangeLog for dev-libs/jsoncpp
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/jsoncpp/ChangeLog,v 1.1 2012/12/29 20:08:06 phajdan.jr Exp $

*jsoncpp-0.5.0 (29 Dec 2012)

  29 Dec 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> +jsoncpp-0.5.0.ebuild,
  +metadata.xml:
  Initial import.
